# rust-rest-apis

./: .env.example  Cargo.toml  README.md
src/: db.rs  handlers.rs  main.rs  models.rs
