[package]
name = "rust-rest-apis"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
